--- a/UF1_Proyecto_compose/app/src/main/res/values/themes.xml
+++ b/UF1_Proyecto_compose/app/src/main/res/values/themes.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.UF1_Proyecto_compose" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-    </style>
+    <style name="Theme.UF1_Proyecto_compose" parent="android:Theme.Material.Light.NoActionBar" />
 
 </resources>
